// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article D.212 => Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D.212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`Article D.212-5 => Article D212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5",
      "value": "D212-5",
    },
    "code": undefined,
    "fullValue": "Article D212-5",
    "source": "Article D.212-5",
    "url": undefined,
    "value": "Article D212-5",
  },
]
`;

exports[`Article D.212-5-6 => Article D212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6",
      "value": "D212-5-6",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6",
    "source": "Article D.212-5-6",
    "url": undefined,
    "value": "Article D212-5-6",
  },
]
`;

exports[`Article D.212-5-6-7 => Article D212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6-7",
      "value": "D212-5-6-7",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6-7",
    "source": "Article D.212-5-6-7",
    "url": undefined,
    "value": "Article D212-5-6-7",
  },
]
`;

exports[`Article D-212 => Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D-212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`Article D-212-4 => Article D212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212-4",
      "value": "D212-4",
    },
    "code": undefined,
    "fullValue": "Article D212-4",
    "source": "Article D-212-4",
    "url": undefined,
    "value": "Article D212-4",
  },
]
`;

exports[`Article D212 => Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`Article D212 du code civil => Article D212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article D212 du Code civil",
    "source": "Article D212 du code civil",
    "url": undefined,
    "value": "Article D212 du Code civil",
  },
]
`;

exports[`Article D212 du code penal et article R413 du code civil => Article D212 du Code pénal, Article R413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code penal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code penal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article R413",
      "value": "R413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article R413 du Code civil",
    "source": "article R413 du code civil",
    "url": undefined,
    "value": "Article R413 du Code civil",
  },
]
`;

exports[`Article D212 du code pénal => Article D212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code pénal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
]
`;

exports[`Article D212-3 => Article D212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212-3",
      "value": "D212-3",
    },
    "code": undefined,
    "fullValue": "Article D212-3",
    "source": "Article D212-3",
    "url": undefined,
    "value": "Article D212-3",
  },
]
`;

exports[`Article XD212 =>  1`] = `Array []`;

exports[`random text   Article D.212 random    text Article D.212    random text => Article D212, Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D.212",
    "url": undefined,
    "value": "Article D212",
  },
  Object {
    "article": Object {
      "source": "Article D.212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D.212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text   Article D.212-5 random    text Article D.212-5    random text => Article D212-5, Article D212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5",
      "value": "D212-5",
    },
    "code": undefined,
    "fullValue": "Article D212-5",
    "source": "Article D.212-5",
    "url": undefined,
    "value": "Article D212-5",
  },
  Object {
    "article": Object {
      "source": "Article D.212-5",
      "value": "D212-5",
    },
    "code": undefined,
    "fullValue": "Article D212-5",
    "source": "Article D.212-5",
    "url": undefined,
    "value": "Article D212-5",
  },
]
`;

exports[`random text   Article D.212-5-6 random    text Article D.212-5-6    random text => Article D212-5-6, Article D212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6",
      "value": "D212-5-6",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6",
    "source": "Article D.212-5-6",
    "url": undefined,
    "value": "Article D212-5-6",
  },
  Object {
    "article": Object {
      "source": "Article D.212-5-6",
      "value": "D212-5-6",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6",
    "source": "Article D.212-5-6",
    "url": undefined,
    "value": "Article D212-5-6",
  },
]
`;

exports[`random text   Article D.212-5-6-7 random    text Article D.212-5-6-7    random text => Article D212-5-6-7, Article D212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6-7",
      "value": "D212-5-6-7",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6-7",
    "source": "Article D.212-5-6-7",
    "url": undefined,
    "value": "Article D212-5-6-7",
  },
  Object {
    "article": Object {
      "source": "Article D.212-5-6-7",
      "value": "D212-5-6-7",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6-7",
    "source": "Article D.212-5-6-7",
    "url": undefined,
    "value": "Article D212-5-6-7",
  },
]
`;

exports[`random text   Article D-212 random    text Article D-212    random text => Article D212, Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D-212",
    "url": undefined,
    "value": "Article D212",
  },
  Object {
    "article": Object {
      "source": "Article D-212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D-212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text   Article D-212-4 random    text Article D-212-4    random text => Article D212-4, Article D212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212-4",
      "value": "D212-4",
    },
    "code": undefined,
    "fullValue": "Article D212-4",
    "source": "Article D-212-4",
    "url": undefined,
    "value": "Article D212-4",
  },
  Object {
    "article": Object {
      "source": "Article D-212-4",
      "value": "D212-4",
    },
    "code": undefined,
    "fullValue": "Article D212-4",
    "source": "Article D-212-4",
    "url": undefined,
    "value": "Article D212-4",
  },
]
`;

exports[`random text   Article D212 du code civil random    text Article D212 du code civil    random text => Article D212 du Code civil, Article D212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article D212 du Code civil",
    "source": "Article D212 du code civil",
    "url": undefined,
    "value": "Article D212 du Code civil",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article D212 du Code civil",
    "source": "Article D212 du code civil",
    "url": undefined,
    "value": "Article D212 du Code civil",
  },
]
`;

exports[`random text   Article D212 du code penal et article R413 du code civil random    text Article D212 du code penal et article R413 du code civil    random text => Article D212 du Code pénal, Article R413 du Code civil, Article D212 du Code pénal, Article R413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code penal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code penal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article R413",
      "value": "R413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article R413 du Code civil",
    "source": "article R413 du code civil",
    "url": undefined,
    "value": "Article R413 du Code civil",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code penal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code penal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article R413",
      "value": "R413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article R413 du Code civil",
    "source": "article R413 du code civil",
    "url": undefined,
    "value": "Article R413 du Code civil",
  },
]
`;

exports[`random text   Article D212 du code pénal random    text Article D212 du code pénal    random text => Article D212 du Code pénal, Article D212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code pénal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code pénal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
]
`;

exports[`random text   Article D212 random    text Article D212    random text => Article D212, Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D212",
    "url": undefined,
    "value": "Article D212",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text   Article D212-3 random    text Article D212-3    random text => Article D212-3, Article D212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212-3",
      "value": "D212-3",
    },
    "code": undefined,
    "fullValue": "Article D212-3",
    "source": "Article D212-3",
    "url": undefined,
    "value": "Article D212-3",
  },
  Object {
    "article": Object {
      "source": "Article D212-3",
      "value": "D212-3",
    },
    "code": undefined,
    "fullValue": "Article D212-3",
    "source": "Article D212-3",
    "url": undefined,
    "value": "Article D212-3",
  },
]
`;

exports[`random text   Article XD212 random    text Article XD212    random text =>  1`] = `Array []`;

exports[`random text Article D.212 random text => Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D.212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text Article D.212 random text Article D.212 random text => Article D212, Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D.212",
    "url": undefined,
    "value": "Article D212",
  },
  Object {
    "article": Object {
      "source": "Article D.212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D.212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text Article D.212-5 random text => Article D212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5",
      "value": "D212-5",
    },
    "code": undefined,
    "fullValue": "Article D212-5",
    "source": "Article D.212-5",
    "url": undefined,
    "value": "Article D212-5",
  },
]
`;

exports[`random text Article D.212-5 random text Article D.212-5 random text => Article D212-5, Article D212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5",
      "value": "D212-5",
    },
    "code": undefined,
    "fullValue": "Article D212-5",
    "source": "Article D.212-5",
    "url": undefined,
    "value": "Article D212-5",
  },
  Object {
    "article": Object {
      "source": "Article D.212-5",
      "value": "D212-5",
    },
    "code": undefined,
    "fullValue": "Article D212-5",
    "source": "Article D.212-5",
    "url": undefined,
    "value": "Article D212-5",
  },
]
`;

exports[`random text Article D.212-5-6 random text => Article D212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6",
      "value": "D212-5-6",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6",
    "source": "Article D.212-5-6",
    "url": undefined,
    "value": "Article D212-5-6",
  },
]
`;

exports[`random text Article D.212-5-6 random text Article D.212-5-6 random text => Article D212-5-6, Article D212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6",
      "value": "D212-5-6",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6",
    "source": "Article D.212-5-6",
    "url": undefined,
    "value": "Article D212-5-6",
  },
  Object {
    "article": Object {
      "source": "Article D.212-5-6",
      "value": "D212-5-6",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6",
    "source": "Article D.212-5-6",
    "url": undefined,
    "value": "Article D212-5-6",
  },
]
`;

exports[`random text Article D.212-5-6-7 random text => Article D212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6-7",
      "value": "D212-5-6-7",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6-7",
    "source": "Article D.212-5-6-7",
    "url": undefined,
    "value": "Article D212-5-6-7",
  },
]
`;

exports[`random text Article D.212-5-6-7 random text Article D.212-5-6-7 random text => Article D212-5-6-7, Article D212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6-7",
      "value": "D212-5-6-7",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6-7",
    "source": "Article D.212-5-6-7",
    "url": undefined,
    "value": "Article D212-5-6-7",
  },
  Object {
    "article": Object {
      "source": "Article D.212-5-6-7",
      "value": "D212-5-6-7",
    },
    "code": undefined,
    "fullValue": "Article D212-5-6-7",
    "source": "Article D.212-5-6-7",
    "url": undefined,
    "value": "Article D212-5-6-7",
  },
]
`;

exports[`random text Article D-212 random text => Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D-212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text Article D-212 random text Article D-212 random text => Article D212, Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D-212",
    "url": undefined,
    "value": "Article D212",
  },
  Object {
    "article": Object {
      "source": "Article D-212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D-212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text Article D-212-4 random text => Article D212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212-4",
      "value": "D212-4",
    },
    "code": undefined,
    "fullValue": "Article D212-4",
    "source": "Article D-212-4",
    "url": undefined,
    "value": "Article D212-4",
  },
]
`;

exports[`random text Article D-212-4 random text Article D-212-4 random text => Article D212-4, Article D212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D-212-4",
      "value": "D212-4",
    },
    "code": undefined,
    "fullValue": "Article D212-4",
    "source": "Article D-212-4",
    "url": undefined,
    "value": "Article D212-4",
  },
  Object {
    "article": Object {
      "source": "Article D-212-4",
      "value": "D212-4",
    },
    "code": undefined,
    "fullValue": "Article D212-4",
    "source": "Article D-212-4",
    "url": undefined,
    "value": "Article D212-4",
  },
]
`;

exports[`random text Article D212 du code civil random text => Article D212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article D212 du Code civil",
    "source": "Article D212 du code civil",
    "url": undefined,
    "value": "Article D212 du Code civil",
  },
]
`;

exports[`random text Article D212 du code civil random text Article D212 du code civil random text => Article D212 du Code civil, Article D212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article D212 du Code civil",
    "source": "Article D212 du code civil",
    "url": undefined,
    "value": "Article D212 du Code civil",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article D212 du Code civil",
    "source": "Article D212 du code civil",
    "url": undefined,
    "value": "Article D212 du Code civil",
  },
]
`;

exports[`random text Article D212 du code penal et article R413 du code civil random text => Article D212 du Code pénal, Article R413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code penal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code penal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article R413",
      "value": "R413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article R413 du Code civil",
    "source": "article R413 du code civil",
    "url": undefined,
    "value": "Article R413 du Code civil",
  },
]
`;

exports[`random text Article D212 du code penal et article R413 du code civil random text Article D212 du code penal et article R413 du code civil random text => Article D212 du Code pénal, Article R413 du Code civil, Article D212 du Code pénal, Article R413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code penal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code penal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article R413",
      "value": "R413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article R413 du Code civil",
    "source": "article R413 du code civil",
    "url": undefined,
    "value": "Article R413 du Code civil",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code penal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code penal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article R413",
      "value": "R413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "Article R413 du Code civil",
    "source": "article R413 du code civil",
    "url": undefined,
    "value": "Article R413 du Code civil",
  },
]
`;

exports[`random text Article D212 du code pénal random text => Article D212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code pénal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
]
`;

exports[`random text Article D212 du code pénal random text Article D212 du code pénal random text => Article D212 du Code pénal, Article D212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code pénal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D212 du Code pénal",
    "source": "Article D212 du code pénal",
    "url": undefined,
    "value": "Article D212 du Code pénal",
  },
]
`;

exports[`random text Article D212 random text => Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text Article D212 random text Article D212 random text => Article D212, Article D212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D212",
    "url": undefined,
    "value": "Article D212",
  },
  Object {
    "article": Object {
      "source": "Article D212",
      "value": "D212",
    },
    "code": undefined,
    "fullValue": "Article D212",
    "source": "Article D212",
    "url": undefined,
    "value": "Article D212",
  },
]
`;

exports[`random text Article D212-3 random text => Article D212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212-3",
      "value": "D212-3",
    },
    "code": undefined,
    "fullValue": "Article D212-3",
    "source": "Article D212-3",
    "url": undefined,
    "value": "Article D212-3",
  },
]
`;

exports[`random text Article D212-3 random text Article D212-3 random text => Article D212-3, Article D212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D212-3",
      "value": "D212-3",
    },
    "code": undefined,
    "fullValue": "Article D212-3",
    "source": "Article D212-3",
    "url": undefined,
    "value": "Article D212-3",
  },
  Object {
    "article": Object {
      "source": "Article D212-3",
      "value": "D212-3",
    },
    "code": undefined,
    "fullValue": "Article D212-3",
    "source": "Article D212-3",
    "url": undefined,
    "value": "Article D212-3",
  },
]
`;

exports[`random text Article XD212 random text =>  1`] = `Array []`;

exports[`random text Article XD212 random text Article XD212 random text =>  1`] = `Array []`;

exports[`should match a bunch of versions 1`] = `
Array [
  Object {
    "article": Object {
      "source": "article L. 2232-5",
      "value": "L2232-5",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006072050",
      "source": "code du travail",
      "value": "Code du travail",
    },
    "fullValue": "Article L2232-5 du Code du travail",
    "source": "article L. 2232-5 du code du travail",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000035627459&cidTexte=LEGITEXT000006072050",
    "value": "Article L2232-5 du Code du travail",
  },
  Object {
    "article": Object {
      "source": "article L123-11-3",
      "value": "L123-11-3",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000005634379",
      "source": "code du commerce",
      "value": "Code de commerce",
    },
    "fullValue": "Article L123-11-3 du Code de commerce",
    "source": "article L123-11-3 du code du commerce",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000020196876&cidTexte=LEGITEXT000005634379",
    "value": "Article L123-11-3 du Code de commerce",
  },
  Object {
    "article": Object {
      "source": "article 1045",
      "value": "1045",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006069577",
      "source": "Code général des impôts",
      "value": "Code général des impôts",
    },
    "fullValue": "Article 1045 du Code général des impôts",
    "source": "article 1045 du Code général des impôts",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000029738408&cidTexte=LEGITEXT000006069577",
    "value": "Article 1045 du Code général des impôts",
  },
  Object {
    "article": Object {
      "source": "article L1131-1",
      "value": "L1131-1",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006071307",
      "source": "code de la défense",
      "value": "Code de la défense",
    },
    "fullValue": "Article L1131-1 du Code de la défense",
    "source": "article L1131-1 du code de la défense",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000020932642&cidTexte=LEGITEXT000006071307",
    "value": "Article L1131-1 du Code de la défense",
  },
  Object {
    "article": Object {
      "source": "Article L311-13",
      "value": "L311-13",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070158",
      "source": "Code de l'entrée et du séjour des étrangers et du droit",
      "value": "Code de l'entrée et du séjour des étrangers et du droit d'asile",
    },
    "fullValue": "Article L311-13 du Code de l'entrée et du séjour des étrangers et du droit d'asile",
    "source": "Article L311-13 du Code de l'entrée et du séjour des étrangers et du droit",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000037986972&cidTexte=LEGITEXT000006070158",
    "value": "Article L311-13 du Code de l'entrée et du séjour des étrangers et du droit d'asile",
  },
  Object {
    "article": Object {
      "source": "article L. 2232-5-1",
      "value": "L2232-5-1",
    },
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Article L2232-5-1 du code du test",
    "source": "article L. 2232-5-1",
    "url": undefined,
    "value": "Article L2232-5-1",
  },
  Object {
    "article": Object {
      "source": "article L. 2232-5-1",
      "value": "L2232-5-1",
    },
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Article L2232-5-1 du code du test",
    "source": "article L. 2232-5-1",
    "url": undefined,
    "value": "Article L2232-5-1",
  },
  Object {
    "article": Object {
      "source": "article L. 2232-5-1",
      "value": "L2232-5-1",
    },
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Article L2232-5-1 du code du test",
    "source": "article L. 2232-5-1",
    "url": undefined,
    "value": "Article L2232-5-1",
  },
  Object {
    "article": Object {
      "source": "article R131-33",
      "value": "R131-33",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article R131-33 du Code pénal",
    "source": "article R131-33 du code pénal",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006419397&cidTexte=LEGITEXT000006070719",
    "value": "Article R131-33 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article L. 123-1",
      "value": "L123-1",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006074228",
      "source": "code de la route",
      "value": "Code de la route",
    },
    "fullValue": "Article L123-1 du Code de la route",
    "source": "article L. 123-1 du code de la route",
    "url": undefined,
    "value": "Article L123-1 du Code de la route",
  },
  Object {
    "article": Object {
      "source": "article R131-2",
      "value": "R131-2",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article R131-2 du Code pénal",
    "source": "article R131-2 du code pénal",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006419340&cidTexte=LEGITEXT000006070719",
    "value": "Article R131-2 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "Article L2253-1",
      "value": "L2253-1",
    },
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Article L2253-1 du code du test",
    "source": "articles L. 2253-1",
    "url": undefined,
    "value": "Article L2253-1",
  },
  Object {
    "article": Object {
      "source": "Article D1143-4",
      "value": "D1143-4",
    },
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Article D1143-4 du code du test",
    "source": "D1143-4",
    "url": undefined,
    "value": "Article D1143-4",
  },
  Object {
    "article": Object {
      "source": "Article L311-13",
      "value": "L311-13",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070158",
      "source": "Code de l'entrée et du séjour des étrangers et du droit",
      "value": "Code de l'entrée et du séjour des étrangers et du droit d'asile",
    },
    "fullValue": "Article L311-13 du Code de l'entrée et du séjour des étrangers et du droit d'asile",
    "source": "articles L311-13",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000037986972&cidTexte=LEGITEXT000006070158",
    "value": "Article L311-13",
  },
  Object {
    "article": Object {
      "source": "Article L311-18",
      "value": "L311-18",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070158",
      "source": "Code de l'entrée et du séjour des étrangers et du droit",
      "value": "Code de l'entrée et du séjour des étrangers et du droit d'asile",
    },
    "fullValue": "Article L311-18 du Code de l'entrée et du séjour des étrangers et du droit d'asile",
    "source": "L311-18",
    "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000036429618&cidTexte=LEGITEXT000006070158",
    "value": "Article L311-18",
  },
  Object {
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Articles L2253-1 à L2253-3 du code du test",
    "source": "articles L. 2253-1 à L. 2253-3",
    "url": undefined,
    "value": "Articles L2253-1 à L2253-3",
  },
  Object {
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Articles R131-24 à R131-27 du Code pénal",
    "source": "articles R131-24 à R. 131-27 du code pénal",
    "url": "https://www.legifrance.gouv.fr/affichCode.do?idArticle=LEGIARTI000006419388&cidTexte=LEGITEXT000006070719",
    "value": "Articles R131-24 à R131-27 du Code pénal",
  },
]
`;

exports[`should use defaultCode for Article D.212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "Article D.212-5-6",
      "value": "D212-5-6",
    },
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Article D212-5-6 du code du test",
    "source": "Article D.212-5-6",
    "url": undefined,
    "value": "Article D212-5-6",
  },
]
`;

exports[`should use defaultCode for L'article L. 123-1 du code de la route est remplacé par L'article D. 2253-3 du code pénal et ainsi de suite 1`] = `
Array [
  Object {
    "article": Object {
      "source": "article L. 123-1",
      "value": "L123-1",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006074228",
      "source": "code de la route",
      "value": "Code de la route",
    },
    "fullValue": "Article L123-1 du Code de la route",
    "source": "article L. 123-1 du code de la route",
    "url": undefined,
    "value": "Article L123-1 du Code de la route",
  },
  Object {
    "article": Object {
      "source": "article D. 2253-3",
      "value": "D2253-3",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D2253-3 du Code pénal",
    "source": "article D. 2253-3 du code pénal",
    "url": undefined,
    "value": "Article D2253-3 du Code pénal",
  },
]
`;

exports[`should use defaultCode for L'article L. 123-1 du code de la route est remplacé par L'article D. 2253-3 du code pénal et ainsi de suite et l'article D123-4 est OK 1`] = `
Array [
  Object {
    "article": Object {
      "source": "article L. 123-1",
      "value": "L123-1",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006074228",
      "source": "code de la route",
      "value": "Code de la route",
    },
    "fullValue": "Article L123-1 du Code de la route",
    "source": "article L. 123-1 du code de la route",
    "url": undefined,
    "value": "Article L123-1 du Code de la route",
  },
  Object {
    "article": Object {
      "source": "article D. 2253-3",
      "value": "D2253-3",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "Article D2253-3 du Code pénal",
    "source": "article D. 2253-3 du code pénal",
    "url": undefined,
    "value": "Article D2253-3 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "article D123-4",
      "value": "D123-4",
    },
    "code": Object {
      "id": "LEGITEXT000006070158",
      "value": "code du test",
    },
    "fullValue": "Article D123-4 du code du test",
    "source": "article D123-4",
    "url": undefined,
    "value": "Article D123-4",
  },
]
`;
